--- a/crosspay_front/templates/property_details.html
+++ b/crosspay_front/templates/property_details.html
@@ -7,7 +7,7 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
             <span class="d-inline-block text-white px-3 mb-3 property-offer-type rounded">Property Details of</span>
-            <h1 class="mb-2">625 S. Berendo St</h1>
+            <h1 class="mb-2">625 S. Berendo S</h1>
             <p class="mb-5"><strong class="h2 text-success font-weight-bold">$1,000,500</strong></p>
           </div>
         </div>
@@ -20,31 +20,31 @@
           <div class="col-lg-8">
             <div>
               <div class="slide-one-item home-slider owl-carousel">
-                <div><img src="{% static 'images/hero_bg_1.jpg' %}" alt="Image" class="img-fluid"></div>
-                <div><img src="{% static 'images/hero_bg_2.jpg' %}" alt="Image" class="img-fluid"></div>
-                <div><img src="{% static 'images/hero_bg_3.jpg' %}" alt="Image" class="img-fluid"></div>
+                <div><img src="{{details.image.url}}" alt="Image" class="img-fluid"></div>
+                <div><img src="{{details.image.url}}" alt="Image" class="img-fluid"></div>
+                <div><img src="{{details.image.url}}" alt="Image" class="img-fluid"></div>
               </div>
             </div>
             <div class="bg-white property-body border-bottom border-left border-right">
               <div class="row mb-5">
                 <div class="col-md-6">
-                  <strong class="text-success h1 mb-3">$1,000,500</strong>
+                  <strong class="text-success h1 mb-3">{{ details.price }}</strong>
                 </div>
                 <div class="col-md-6">
                   <ul class="property-specs-wrap mb-3 mb-lg-0  float-lg-right">
                   <li>
-                    <span class="property-specs">Beds</span>
-                    <span class="property-specs-number">2 <sup>+</sup></span>
+                    <span class="property-specs">Total area</span>
+                    <span class="property-specs-number">{{ details.total_area }}</span>
                     
                   </li>
                   <li>
-                    <span class="property-specs">Baths</span>
-                    <span class="property-specs-number">2</span>
+                    <span class="property-specs">living area</span>
+                    <span class="property-specs-number">{{ details.living_area }}</span>
                     
                   </li>
                   <li>
-                    <span class="property-specs">SQ FT</span>
-                    <span class="property-specs-number">7,000</span>
+                    <span class="property-specs">price/m</span>
+                    <span class="property-specs-number">{{ details.price_per_meter }}</span>
                     
                   </li>
                 </ul>
@@ -53,21 +53,20 @@
               <div class="row mb-5">
                 <div class="col-md-6 col-lg-4 text-center border-bottom border-top py-3">
                   <span class="d-inline-block text-black mb-0 caption-text">Home Type</span>
-                  <strong class="d-block">Condo</strong>
+                  <strong class="d-block">{{ details.property_type }}</strong>
                 </div>
                 <div class="col-md-6 col-lg-4 text-center border-bottom border-top py-3">
                   <span class="d-inline-block text-black mb-0 caption-text">Year Built</span>
-                  <strong class="d-block">2018</strong>
+                  <strong class="d-block">{{ details.year_built }}</strong>
                 </div>
                 <div class="col-md-6 col-lg-4 text-center border-bottom border-top py-3">
-                  <span class="d-inline-block text-black mb-0 caption-text">Price/Sqft</span>
-                  <strong class="d-block">$520</strong>
+                  <span class="d-inline-block text-black mb-0 caption-text">Address</span>
+                  <strong class="d-block">{{ details.address }}</strong>
                 </div>
               </div>
-              <h2 class="h4 text-black">More Info</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda aperiam perferendis deleniti vitae asperiores accusamus tempora facilis sapiente, quas! Quos asperiores alias fugiat sunt tempora molestias quo deserunt similique sequi.</p>
-              <p>Nisi voluptatum error ipsum repudiandae, autem deleniti, velit dolorem enim quaerat rerum incidunt sed, qui ducimus! Tempora architecto non, eligendi vitae dolorem laudantium dolore blanditiis assumenda in eos hic unde.</p>
-              <p>Voluptatum debitis cupiditate vero tempora error fugit aspernatur sint veniam laboriosam eaque eum, et hic odio quibusdam molestias corporis dicta! Beatae id magni, laudantium nulla iure ea sunt aliquam. A.</p>
+              <h2 class="h4 text-black">Description</h2>
+              <p>{{ details.more_info }}</p>
+              
 
               <div class="row no-gutters mt-5">
                 <div class="col-12">
@@ -163,8 +162,13 @@
             <div class="property-entry h-100">
               <a href="property-details.html" class="property-thumbnail">
                 <div class="offer-type-wrap">
-                  <span class="offer-type bg-danger">Sale</span>
-                  <span class="offer-type bg-success">Rent</span>
+                  {% if on_sale  %}
+                    <span class="offer-type bg-danger">Sale</span>
+                  {% endif %}
+
+                  {% if for_rent  %}
+                    <span class="offer-type bg-success">Rent</span>
+                  {% endif %}
                 </div>
                 <img src="{% static 'images/img_1.jpg' %}" alt="Image" class="img-fluid">
               </a>
