--- a/crosspay_front/templates/property.html
+++ b/crosspay_front/templates/property.html
@@ -91,8 +91,8 @@
               </div>
               <div class="ml-auto d-flex align-items-center">
                 <div>
-                  <a href="" class="view-list px-3 border-right active">All</a>
-                  <a href="" class="view-list px-3 border-right">Rent</a>
+                  <a href="?search=all" class="view-list px-3 border-right active">All</a>
+                  <a href="?search=rent" class="view-list px-3 border-right">Rent</a>
                   <a href="?search=sale" class="view-list px-3">Sale</a>
                 </div>
 
