--- a/crosspay_front/templates/accounts/login.html
+++ b/crosspay_front/templates/accounts/login.html
@@ -14,7 +14,7 @@
         <div class="col-lg-4 col-md-8 col-12 mx-auto">
           <div class="card z-index-0 fadeIn3 fadeInBottom">
             <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
+              <div class="border-radius-lg py-3 pe-1" style="background-color:rgb(185, 185, 190) ;">
                 <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Sign in</h4>
                 <div class="row mt-3">
                   <div class="col-2 text-center ms-auto">
@@ -41,12 +41,12 @@
                 {% csrf_token %}
                 <div class="input-group input-group-outline my-3">
                   <label class="form-label">Username</label>
-                  {% render_field form_login.username type="input" class="form-control" %}
+                  {% render_field form_login.username class="form-control" %}
                   {% comment %} <input type="email" class="form-control"> {% endcomment %}
                 </div>
                 <div class="input-group input-group-outline mb-3">
                   <label class="form-label">Password</label>
-                  {% render_field form_login.password type="password" class="form-control" %}
+                  {% render_field form_login.password  class="form-control" %}
                   
                 </div>
                 <div class="form-check form-switch d-flex align-items-center mb-3">
@@ -60,7 +60,7 @@
                   </div>
                 {% endfor %}
                 <div class="text-center">
-                  <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
+                  <button type="submit" class="btn w-100 my-4 mb-2" style="background-color:rg(185, 185, 190)">login</button>
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Don't have an account?
