--- a/crosspay_front/templates/property_details.html
+++ b/crosspay_front/templates/property_details.html
@@ -7,8 +7,8 @@
         <div class="row align-items-center justify-content-center text-center">
           <div class="col-md-10">
             <span class="d-inline-block text-white px-3 mb-3 property-offer-type rounded">Property Details of</span>
-            <h1 class="mb-2">625 S. Berendo S</h1>
-            <p class="mb-5"><strong class="h2 text-success font-weight-bold">$1,000,500</strong></p>
+            <h1 class="mb-2">{{details.titre}}</h1>
+            <p class="mb-5"><strong class="h2 text-success font-weight-bold">{{details.price}}</strong></p>
           </div>
         </div>
       </div>
@@ -111,36 +111,30 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4">
+          
+              <div class="col-lg-4">
+            {% if details.user.photo.url %}  
+                <div class="bg-white widget border rounded">
 
-            <div class="bg-white widget border rounded">
+                  <h3 class="h4 text-black widget-title mb-3">Author</h3>
+                    <div class="form-group">
+                    <img src="{{details.user.photo.url}}" width="248px" height="248px" >
+                    <p style="font-size:20px ;">{{details.user}}</p> 
+                    </div>
+          
+                    <div class="form-group">
+                      <a href="#"  id="phone" class="btn btn-primary" value="voir profil" style="color:white ;">voir profil</a>
+                    </div>
 
-              <h3 class="h4 text-black widget-title mb-3">Contact Agent</h3>
-              <form action="" class="form-contact-agent">
-                <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="text" id="name" class="form-control">
+                  </form>
                 </div>
-                <div class="form-group">
-                  <label for="email">Email</label>
-                  <input type="email" id="email" class="form-control">
+          {% endif %}        
+                <div class="bg-white widget border rounded">
+                  <h3 class="h4 text-black widget-title mb-3">Paragraph</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit qui explicabo, libero nam, saepe eligendi. Molestias maiores illum error rerum. Exercitationem ullam saepe, minus, reiciendis ducimus quis. Illo, quisquam, veritatis.</p>
                 </div>
-                <div class="form-group">
-                  <label for="phone">Phone</label>
-                  <input type="text" id="phone" class="form-control">
-                </div>
-                <div class="form-group">
-                  <input type="submit" id="phone" class="btn btn-primary" value="Send Message">
-                </div>
-              </form>
-            </div>
 
-            <div class="bg-white widget border rounded">
-              <h3 class="h4 text-black widget-title mb-3">Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit qui explicabo, libero nam, saepe eligendi. Molestias maiores illum error rerum. Exercitationem ullam saepe, minus, reiciendis ducimus quis. Illo, quisquam, veritatis.</p>
-            </div>
-
-          </div>
+              </div>
           
         </div>
       </div>
@@ -199,76 +193,9 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="property-entry h-100">
-              <a href="property-details.html" class="property-thumbnail">
-                <div class="offer-type-wrap">
-                  <span class="offer-type bg-danger">Sale</span>
-                  <span class="offer-type bg-success">Rent</span>
-                </div>
-                <img src="{% static 'images/img_2.jpg' %}" alt="Image" class="img-fluid">
-              </a>
-              <div class="p-4 property-body">
-                <a href="#" class="property-favorite active"><span class="icon-heart-o"></span></a>
-                <h2 class="property-title"><a href="property-details.html">871 Crenshaw Blvd</a></h2>
-                <span class="property-location d-block mb-3"><span class="property-icon icon-room"></span> 1 New York Ave, Warners Bay, NSW 2282</span>
-                <strong class="property-price text-primary mb-3 d-block text-success">$2,265,500</strong>
-                <ul class="property-specs-wrap mb-3 mb-lg-0">
-                  <li>
-                    <span class="property-specs">Beds</span>
-                    <span class="property-specs-number">2 <sup>+</sup></span>
-                    
-                  </li>
-                  <li>
-                    <span class="property-specs">Baths</span>
-                    <span class="property-specs-number">2</span>
-                    
-                  </li>
-                  <li>
-                    <span class="property-specs">SQ FT</span>
-                    <span class="property-specs-number">1,620</span>
-                    
-                  </li>
-                </ul>
+          
 
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="property-entry h-100">
-              <a href="property-details.html" class="property-thumbnail">
-                <div class="offer-type-wrap">
-                  <span class="offer-type bg-info">Lease</span>
-                </div>
-                <img src="{% static 'images/img_3.jpg' %}" alt="Image" class="img-fluid">
-              </a>
-              <div class="p-4 property-body">
-                <a href="#" class="property-favorite"><span class="icon-heart-o"></span></a>
-                <h2 class="property-title"><a href="property-details.html">853 S Lucerne Blvd</a></h2>
-                <span class="property-location d-block mb-3"><span class="property-icon icon-room"></span> 853 S Lucerne Blvd Unit 101 Los Angeles, CA 90005</span>
-                <strong class="property-price text-primary mb-3 d-block text-success">$2,265,500</strong>
-                <ul class="property-specs-wrap mb-3 mb-lg-0">
-                  <li>
-                    <span class="property-specs">Beds</span>
-                    <span class="property-specs-number">2 <sup>+</sup></span>
-                    
-                  </li>
-                  <li>
-                    <span class="property-specs">Baths</span>
-                    <span class="property-specs-number">2</span>
-                    
-                  </li>
-                  <li>
-                    <span class="property-specs">SQ FT</span>
-                    <span class="property-specs-number">5,500</span>
-                    
-                  </li>
-                </ul>
-
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
 {% endblock content %}
