--- a/crosspay_front/templates/accounts/login.html
+++ b/crosspay_front/templates/accounts/login.html
@@ -60,7 +60,7 @@
                   </div>
                 {% endfor %}
                 <div class="text-center">
-                  <button type="submit" class="btn w-100 my-4 mb-2" style="background-color:rg(185, 185, 190)">login</button>
+                  <button type="submit" class="btn w-100 my-4 mb-2" style="background-color:rgb(185, 185, 190)">login</button>
                 </div>
                 <p class="mt-4 text-sm text-center">
                   Don't have an account?
